--- a/css/main.css
+++ b/css/main.css
@@ -28,6 +28,15 @@ textarea {
   outline: none;
 }
 
+a {
+  text-decoration: none;
+  color: #000;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
 #max-control {
   max-width: 45rem;
   margin: 0 auto;
@@ -305,6 +314,7 @@ textarea {
 .pic_modal .btn span {
   cursor: pointer;
   padding: 0 3rem;
+  font-size: 1.4rem;
 }
 
 .modal .content,
