--- a/css/main.css
+++ b/css/main.css
@@ -331,3 +331,14 @@ ol>li {
 .motto {
   padding-bottom: 20px;
 }
+
+
+
+#footer {
+  width: 100%;
+  height: 20px;
+  line-height: 20px;
+  background: #fff;
+  position: fixed;
+  bottom: 0;
+}
